# pcbtools

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  ProjectOptions.cmake  README.md
.github/: constants.env
.github/workflows/: build-macos.yml  build-ubuntu.yml  build-windows.yml
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: config.hpp.in
data/: amp1-Edge_Cuts.gbr
fuzz_test/: CMakeLists.txt
include/pcbtools/: board.h  generate_template.h  get_board_info.h  get_data_file_path.h  get_prefix.h  pcb_library.hpp  point.h  sample_library.hpp
src/: CMakeLists.txt
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/pcb_library/: CMakeLists.txt  get_board_info.cpp  get_data_file_path.cpp  get_prefix.cpp  pcb_library.cpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  get_board_info_tests.cpp  get_prefix_tests.cpp  pcb_tests.cpp  tests.cpp
